Fix showlist container gap

--- a/app/javascript/packs/css/application.css
+++ b/app/javascript/packs/css/application.css
@@ -76,6 +76,15 @@
   margin-right: 5%;
   background-color: #272c2F;
   color:#edeef0;
+
+}
+
+#search-list-container{
+  padding:15px;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: #272c2F;
+  color:#edeef0;
   margin-top: 55px;
 }
 
